updating seeds.sql

--- a/package.json
+++ b/package.json
@@ -3,5 +3,24 @@
     "console.table": "^0.10.0",
     "inquirer": "^9.1.4",
     "mysql2": "^2.3.3"
-  }
+  },
+  "name": "employee-tracker",
+  "description": "",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/awil414/Employee-Tracker.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/awil414/Employee-Tracker/issues"
+  },
+  "homepage": "https://github.com/awil414/Employee-Tracker#readme"
 }
